# tsallis_stats

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
demos/: demo.ipynb  demo.py
tests/: test_tsallis.py
tsallis/: tsallis.py
tsallis_stats/: tsallis.py
