[project]
name = "Tsallis"
description = "Tsallis Statistical Distributions for Scipy"
readme = "README.rst"
license = {text = "BSD-3-Clause"}
maintainers = [{name = "Kevin Givens", email = "givenskevinm@gmail.com"}]
authors = [{name = "Kevin Givens", email = "givenskevinm@gmail.com"}]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
requires-python = ">=3.7"
dependencies = [
    "mpmath>=1.2.1",
    "numpy>=1.21.4",
    "scipy>=1.7.2",
    "importlib-metadata>=3.6.0; python_version < '3.10'",
]
dynamic = ["version"]
